Fix User entity and improve Spring Security integration